提交基于分布式的转发平台